service-mesh-app/k8s/istio/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-network
  labels:
    istio-injection: enabled
