service-mesh-app/k8s/istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-mesh
spec:
  hosts:
    - "*"
  gateways:
    - service-mesh-gateway
  http:
    - match:
        - uri:
            prefix: /service1
      route:
        - destination:
            host: service-mesh-app-service1
            port:
              number: 8080
    - match:
        - uri:
            prefix: /service2
      route:
        - destination:
            host: service-mesh-app-service2
            port:
              number: 8080
