service-mesh-app/k8s/istio/authentication.yml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: ingress-jwt
  namespace: istio-network
spec:
  selector:
    matchLabels:
      app: service-mesh-app-service1
  jwtRules:
    - issuer: "http://keycloak-23.default/realms/master"
      jwksUri: "http://keycloak-23.default/realms/master/protocol/openid-connect/certs"
      fromHeaders:
        - name: Authorization
          prefix: "Bearer "
      forwardOriginalToken: true
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: istio-network
spec:
  selector:
    matchLabels:
      app: service-mesh-app-service1
  action: ALLOW
  rules:
    - when:
        - key: request.auth.claims[iss]
          values:
            - "http://keycloak-23.default/realms/master"
